Fixed a style issue when applying dark mode from light mode in book reader

--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
@@ -104,7 +104,7 @@ $primary-color: #0062cc;
 }
 
 ::ng-deep .dark-mode .drawer-container {
-    .header, body, * {
+    .header, body, *:not(.progress-bar) {
         background-color: $dark-form-background-no-opacity !important;
     }
 }
